--- a/node-express-typescript/package.json
+++ b/node-express-typescript/package.json
@@ -17,5 +17,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "tslint": "^6.1.3",
+    "typescript": "^4.4.3"
   }
 }
