--- a/node-express-typescript/package.json
+++ b/node-express-typescript/package.json
@@ -2,8 +2,11 @@
   "name": "node-express-typescript",
   "version": "1.0.0",
   "description": "Use TypeScript to Build a Node API with Express",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
     "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +22,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "tslint": "^6.1.3",
     "typescript": "^4.4.3"
   }
