--- a/node-express-typescript/package.json
+++ b/node-express-typescript/package.json
@@ -4,9 +4,12 @@
   "description": "Use TypeScript to Build a Node API with Express",
   "main": "dist/index.js",
   "scripts": {
-    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
-    "build": "tsc",
-    "prestart": "npm run build",
+    "clean": "rimraf dist/*",
+    "copy-assets":"ts-node tools/copyAssets",
+    "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+    "tsc": "tsc",
+    "build": "npm-run-all clean lint tsc copy-assets",
+    "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start",
     "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,10 +22,19 @@
   "author": "FATEH OK",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.6",
     "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/fs-extra": "^9.0.13",
+    "@types/shelljs": "^0.8.9",
+    "fs-extra": "^10.0.0",
+    "nodemon": "^2.0.13",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "shelljs": "^0.8.4",
+    "ts-node": "^10.2.1",
     "tslint": "^6.1.3",
     "typescript": "^4.4.3"
   }
