Update npm scripts

--- a/node-express-typescript/package.json
+++ b/node-express-typescript/package.json
@@ -9,7 +9,7 @@
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
     "tsc": "tsc",
     "build": "npm-run-all clean lint tsc copy-assets",
-    "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start",
+    "dev": "nodemon --watch src -e ts,ejs ",
     "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
