--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ NODE_ENV=developement
 
 # Node.js server configuration
 SERVER_PORT=8080
+
+# okta pwd:KTG3nNKwvM2Z5Ta
+# Okta configuration
+OKTA_ORG_URL=https://dev-7702424.okta.com/oauth2/default
+OKTA_CLIENT_ID=0oa21n9nxtrQcUTPX5d7
+OKTA_CLIENT_SECRET=baZCxumAdPMYbGBBOCirGsq3l-5a5zCgGamA979v
