--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ NODE_ENV=developement
 
 # Node.js server configuration
 SERVER_PORT=8080
+HOST_URL=http://localhost:8080
+SESSION_SECRET=zQTsU94R9t8QyngBTY!_P9e
 
 # okta pwd:KTG3nNKwvM2Z5Ta
 # Okta configuration
