--- a/node-express-typescript/package.json
+++ b/node-express-typescript/package.json
@@ -22,13 +22,16 @@
   "author": "FATEH OK",
   "license": "ISC",
   "dependencies": {
+    "@okta/oidc-middleware": "^4.2.0",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-session": "^1.17.2"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/fs-extra": "^9.0.13",
     "@types/shelljs": "^0.8.9",
     "fs-extra": "^10.0.0",
