--- a/node-express-typescript/package.json
+++ b/node-express-typescript/package.json
@@ -27,13 +27,16 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "express-session": "^1.17.2"
+    "express-session": "^1.17.2",
+    "pg": "^8.7.1",
+    "pg-promise": "^10.11.0"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/fs-extra": "^9.0.13",
+    "@types/pg": "^8.6.1",
     "@types/shelljs": "^0.8.9",
     "fs-extra": "^10.0.0",
     "nodemon": "^2.0.13",
