--- a/node-express-typescript/package.json
+++ b/node-express-typescript/package.json
@@ -25,23 +25,30 @@
   "license": "ISC",
   "dependencies": {
     "@okta/oidc-middleware": "^4.2.0",
+    "axios": "^0.21.4",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "materialize-css": "^1.0.0",
     "pg": "^8.7.1",
-    "pg-promise": "^10.11.0"
+    "pg-promise": "^10.11.0",
+    "vue": "^2.6.14"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/fs-extra": "^9.0.13",
+    "@types/materialize-css": "^1.0.11",
     "@types/pg": "^8.6.1",
     "@types/shelljs": "^0.8.9",
+    "@types/vue": "^2.0.0",
     "fs-extra": "^10.0.0",
     "nodemon": "^2.0.13",
     "npm-run-all": "^4.1.5",
+    "parcel-bundler": "^1.12.5",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.4",
     "ts-node": "^10.2.1",
