--- a/node-express-typescript/tsconfig.json
+++ b/node-express-typescript/tsconfig.json
@@ -14,7 +14,6 @@
             ]
         }
     },
-    "include": [
-        "src/*"
-, "src/.d.ts"    ]
+    "include": [ "src/*", "src/.d.ts" ],
+    "exclude": [ "src/public" ]
 }
