update the user interface with vue axios and parcel

--- a/node-express-typescript/package.json
+++ b/node-express-typescript/package.json
@@ -9,7 +9,8 @@
     "copy-assets": "ts-node tools/copyAssets",
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
     "tsc": "tsc",
-    "build": "npm-run-all clean lint tsc copy-assets",
+    "parcel": "parcel build src/public/js/main.ts -d dist/public/js",
+    "build": "npm-run-all clean lint tsc copy-assets parcel",
     "dev:start": "npm-run-all build start",
     "dev": "nodemon --watch src -e ts,ejs",
     "start": "node .",
