--- a/node-express-typescript/package.json
+++ b/node-express-typescript/package.json
@@ -16,6 +16,11 @@
     "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+
+  "alias": {
+    "vue": "./node_modules/vue/dist/vue.common.js"
+  },
+  
   "keywords": [
     "TypeScript",
     "Node",
